Added the feature to water all the plants from widget on a single click

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
                 android:resource="@xml/plant_provider_widget_info" />
         </receiver>
 
+        <service android:name=".ui.PlantWateringService" />
+
         <provider
             android:name=".provider.PlantContentProvider"
             android:authorities="com.example.android.mygarden"
